c2rust-transpile/tests/snapshots/snapshots__c_decls@line_directives.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/c_decls_snapshots/line_directives.c_decls.json
---
{
  "definitions": {
    "before_line": {
      "definition": "int before_line(void) {\n    return 1;\n}",
      "preprocessed_definition": null
    }
  }
}
