c2rust-transpile/tests/snapshots/snapshots__transpile-32@dummy.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/ptr-width-specific/dummy.32.rs
input_file: c2rust-transpile/tests/snapshots/ptr-width-specific/dummy.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
