c2rust-transpile/tests/snapshots/snapshots__transpile-aarch64@spin.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-specific/spin.aarch64.rs
input_file: c2rust-transpile/tests/snapshots/arch-specific/spin.c
---
#![allow(
    clippy::missing_safety_doc,
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_imports,
    unused_mut
)]
#![feature(stdsimd)]
#[cfg(target_arch = "aarch64")]
pub use ::core::arch::aarch64::__yield;
#[cfg(target_arch = "arm")]
pub use ::core::arch::arm::__yield;
#[no_mangle]
pub unsafe extern "C" fn spin() {
    __yield();
}
