c2rust-transpile/tests/snapshots/snapshots__transpile-arm@dummy.c.snap
---
source: c2rust-transpile/tests/snapshots.rs
expression: cat tests/snapshots/arch-specific/dummy.arm.rs
input_file: c2rust-transpile/tests/snapshots/arch-specific/dummy.c
---
#![allow(
    dead_code,
    non_camel_case_types,
    non_snake_case,
    non_upper_case_globals,
    unused_assignments,
    unused_mut
)]
